--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build KMZ Protocol (Manual Mode)
+name: Build KMZ Protocol (Debug Mode)
 
 on:
   push:
@@ -10,65 +10,46 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      # 1. Pega seus arquivos (index.html, icon.png)
       - name: Checkout Source
         uses: actions/checkout@v3
 
-      # 2. Configura o Node.js (necessário para o Cordova)
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      # 3. Configura o Java (necessário para criar APKs Android)
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 4. INSTALAÇÃO E CRIAÇÃO DO APP (A Mágica acontece aqui)
       - name: Build Cordova App
         run: |
-          # Instala o Cordova globalmente
           npm install -g cordova
           
-          # Cria o projeto Android limpo
-          # Nome da pasta: app
-          # ID do pacote: com.kmz.secure
-          # Nome do App: KMZ Secure
+          # Cria o app
           cordova create app com.kmz.secure "KMZ Secure"
-          
-          # Entra na pasta do app
           cd app
-          
-          # Adiciona a plataforma Android
           cordova platform add android
           
-          # --- INJEÇÃO DO SEU CÓDIGO ---
-          # Remove o site padrão do Cordova
+          # Limpa o app padrão e coloca o seu site
           rm -rf www/*
-          
-          # Volta para a pasta raiz, pega SEU index.html e joga dentro do app
           cp ../index.html www/index.html
           
-          # --- CONFIGURAÇÃO DO ÍCONE ---
-          # Se existir um icon.png na raiz, a gente tenta usar
+          # Tenta colocar o ícone se existir
           if [ -f "../icon.png" ]; then
-            echo "Ícone detectado! Copiando..."
             cp ../icon.png www/icon.png
-            # Hack para inserir o ícone no config.xml usando sed (edição de texto via terminal)
             sed -i '/<\/widget>/i \    <icon src="www/icon.png" />' config.xml
           fi
           
-          # --- COMPILAÇÃO ---
-          # Gera o APK
-          cordova build android --release -- --packageType=apk
+          # --- A MUDANÇA MÁGICA ESTÁ AQUI ---
+          # O modo --debug já assina o app automaticamente
+          cordova build android --debug
 
-      # 5. Encontra o APK gerado e prepara para upload
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: KMZ-Secure-App
-          # O caminho onde o Cordova cospe o arquivo
-          path: app/platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk
+          # O caminho muda para 'debug' e o arquivo para 'app-debug.apk'
+          path: app/platforms/android/app/build/outputs/apk/debug/app-debug.apk
