--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build KMZ Final
+name: Build KMZ Ultimate
 
 on:
   push:
@@ -33,19 +33,14 @@ jobs:
           cd app
           cordova platform add android
           
-          # --- PLUGIN ESSENCIAL ---
-          cordova plugin add cordova-plugin-splashscreen
+          # --- INSTALAÇÃO DOS PLUGINS NATIVOS ---
+          # Este plugin permite abrir o WhatsApp, Telegram, etc.
+          cordova plugin add cordova-plugin-x-socialsharing
           
-          # --- CONFIGURAÇÃO AGRESSIVA DO CONFIG.XML ---
-          # 1. Background PRETO (Isso mata o visual do robô cinza)
-          sed -i '/<\/widget>/i \    <preference name="SplashScreenBackgroundColor" value="#000000" />' config.xml
-          
-          # 2. Esconde o splash o mais rápido possível (0ms)
+          # Removemos o plugin de splash nativo para não dar conflito com o Android 12+
+          # E configuramos o fundo obrigatório do Android para PRETO para ocultar o load
+          sed -i '/<\/widget>/i \    <preference name="AndroidWindowSplashScreenBackground" value="#000000" />' config.xml
           sed -i '/<\/widget>/i \    <preference name="SplashScreenDelay" value="0" />' config.xml
-          sed -i '/<\/widget>/i \    <preference name="AutoHideSplashScreen" value="true" />' config.xml
-          
-          # 3. Força não mostrar o spinner de carregamento
-          sed -i '/<\/widget>/i \    <preference name="ShowSplashScreenSpinner" value="false" />' config.xml
           
           # --- SEUS ARQUIVOS ---
           rm -rf www/*
@@ -56,11 +51,11 @@ jobs:
             sed -i '/<\/widget>/i \    <icon src="www/icon.png" />' config.xml
           fi
           
-          # Build Debug (Assinado)
+          # Build Debug
           cordova build android --debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: KMZ-Secure-App-Final
+          name: KMZ-Secure-App-Ultimate
           path: app/platforms/android/app/build/outputs/apk/debug/app-debug.apk
